<resources>
    <string name="app_name">SuperClipboard</string>

    <string name="window_close">Window Close</string>
    <string name="window_min">Window Min</string>
    <string name="window_max">Window Max</string>
    <string name="content_type_icon">Content Type Icon</string>
    <string name="person">Person</string>
    <string name="avatar">Avatar</string>
    <string name="user_name">User Name</string>
    <string name="help">Help</string>
    <string name="move">Move</string>
    <string name="clipboard_empty">ClipBoard is Empty</string>
    <string name="detail">Detail</string>
    <string name="delete">Delete</string>
    <string name="expand">Expand</string>
    <string name="fold">Fold</string>
    <string name="copied">Copied</string>
    <string name="confirm_close">Sure to close?</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="keyword_input_hint">input keyword</string>
    <string name="keyworkd_search">Keyword Search</string>
    <string name="keyworkd_clear">Keyword Clear</string>
    <string name="sync">Sync</string>
    <string name="action_done">Action Done</string>
    <string name="receive_new_content">Received New Content</string>
    <string name="feedback">Feedback</string>
    <string name="click_to_login">Unlogin. Click to login</string>
    <string name="submit">Submit</string>
    <string name="input_content_hint">Please input content...</string>
    <string name="third_party_login">Third Party Login</string>
    <string name="think_feedback">Think you for your feedback</string>
    <string name="logined">Logined. Click to login another account; Long click to change password.</string>
    <string name="open_clipboard">Open Clipboard Float Window</string>
    <string name="sync_clipboard">Sync Clipboard</string>
    <string name="sync_clipboard_hint">Sync content of user account in local area network</string>
    <string name="sync_off">Sync Off</string>
    <string name="sync_on">Sync On: %d Device Total</string>
    <string name="login_qq">Login QQ</string>
    <string name="login_page">Login Page</string>
    <string name="account">Account</string>
    <string name="password">Password</string>
    <string name="password_repeat">Password Repeat</string>
    <string name="captcha_code">Captcha Code</string>
    <string name="login">Login</string>
    <string name="go_register">Go Register</string>
    <string name="register_page">Register Page</string>
    <string name="register">Register</string>
    <string name="go_login">Go Login</string>
    <string name="required">required</string>
    <string name="password_repeat_wrong">Password Repeat is wrong</string>
    <string name="register_success">Register Success</string>
    <string name="network_error">Network Error</string>
    <string name="captcha_code_error">Captcha Code Error</string>
    <string name="account_exists">Account Exists</string>
    <string name="login_success">Login Success</string>
    <string name="account_not_exists">Account not exists</string>
    <string name="password_wrong">Password wrong</string>
    <string name="change_password_page">Change Password Page</string>
    <string name="origin_password">Origin Password</string>
    <string name="new_password">New Password</string>
    <string name="new_password_repeat">New Password Repeat</string>
    <string name="change_password_success">Change Password Success</string>
    <string name="sync_clipboard_usage_notice">Sync Clipboard Usage Notice</string>
    <string name="sync_clipboard_usage_notice_content">Please put your device in the same local area network (wifi). You can download desktop client on official website.</string>
    <string name="official_website_url">https://www.superclipboard.online</string>
    <string name="user_notice">User Notice</string>
    <string name="user_notice_content">User Notice Content</string>
    <string name="readed">Readed</string>
</resources>
