<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="8dp">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/feedback"
        android:textColor="@color/green"
        android:textSize="20sp"
        android:textStyle="bold"/>
    <EditText
        android:id="@+id/feedback_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/feedback"
        android:background="@drawable/feedback_edit"
        android:padding="5dp"
        android:minLines="4"
        android:textAlignment="viewStart"
        android:gravity="start"
        android:hint="@string/input_content_hint"
        android:textSize="14sp"
        android:textColor="@color/green"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="end"
        android:layout_marginTop="10dp">
        <TextView
            android:id="@+id/feedback_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAllCaps="true"
            android:textColor="@color/grey"/>
        <TextView
            android:id="@+id/feedback_submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textSize="14sp"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:textAllCaps="true"
            android:textColor="@color/green"/>
    </LinearLayout>
</LinearLayout>