<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:id="@+id/change_password_page"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/change_password_page"
            android:textColor="@color/green"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/origin_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/origin_password"
            android:padding="1dp"
            android:theme="@style/LoginEditText"
            style="@style/LoginEditText"
            app:counterMaxLength="32"
            android:layout_marginBottom="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/origin_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password"
            android:padding="1dp"
            android:theme="@style/LoginEditText"
            style="@style/LoginEditText"
            app:counterMaxLength="32"
            android:layout_marginBottom="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/new_password_repeat_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password_repeat"
            android:padding="1dp"
            android:theme="@style/LoginEditText"
            style="@style/LoginEditText"
            app:counterMaxLength="32"
            android:layout_marginBottom="5dp">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/new_password_repeat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:inputType="textPassword"/>
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <Button
                android:id="@+id/cancel_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:theme="@style/LoginTextButton"
                style="@style/LoginTextButton"
                android:layout_marginEnd="5dp"/>
            <Button
                android:id="@+id/submit_button"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:theme="@style/LoginButton"
                style="@style/LoginButton"/>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>