<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/bg_main">

    <LinearLayout
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/ic_launcher"
            android:contentDescription="@string/app_name"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textAlignment="center"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:layout_marginBottom="30dp"
            android:textStyle="bold"/>
        <TextView android:id="@+id/btn_open_floatview"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/open_clipboard"
            android:background="@drawable/bg_btn"
            android:textAlignment="center"
            android:textSize="15sp"
            android:padding="10dp"
            android:textColor="@color/black" />
        <View
            android:layout_width="280dp"
            android:layout_height="1px"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:id="@+id/btn_login"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/bg_btn"
            android:padding="5dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:id="@+id/user_type"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_person_black_24dp"
                android:contentDescription="@string/avatar"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/user_name"
                android:text="@string/click_to_login"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/bg_btn"
            android:padding="5dp"
            android:layout_marginBottom="10dp">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="8dp">
                <TextView
                    android:text="@string/sync_clipboard"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/black"/>
                <TextView
                    android:text="@string/sync_clipboard_hint"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/grey"/>
            </LinearLayout>
            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sync_switcher"
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:checked="false"
                android:theme="@style/SwitchTheme"/>
        </LinearLayout>
        <View
            android:layout_width="280dp"
            android:layout_height="1px"
            android:background="@color/white"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:id="@+id/btn_feedback"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:focusable="true"
            android:clickable="true"
            android:background="@drawable/bg_btn"
            android:padding="2dp"
            android:paddingStart="13dp"
            android:paddingEnd="5dp"
            android:layout_marginBottom="10dp">
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_feedback_black_24dp"
                android:tint="@color/black"
                android:contentDescription="@string/avatar"/>
            <TextView
                android:text="@string/feedback"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:padding="8dp"
                android:textSize="15sp"
                android:textColor="@color/black"/>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>