<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:text="@string/confirm_close"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:padding="8dp"
                android:textSize="14sp"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="end">
                <TextView
                    android:id="@+id/confirm_close_cancel"
                    android:text="@string/cancel"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="8dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:textSize="12sp"
                    android:background="?attr/selectableItemBackground"/>
                <TextView
                    android:id="@+id/confirm_close_confirm"
                    android:text="@string/confirm"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:padding="8dp"
                    android:focusable="true"
                    android:clickable="true"
                    android:textSize="12sp"
                    android:textColor="@color/red"
                    android:background="?attr/selectableItemBackground"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>