<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <androidx.cardview.widget.CardView
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="4dp"
        app:cardElevation="4dp"
        app:cardPreventCornerOverlap="false"
        app:cardBackgroundColor="@color/white"
        app:cardUseCompatPadding="true"
        app:contentPadding="0dp">
        <LinearLayout
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:focusable="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_margin="3dp"
                    android:scaleType="centerInside"
                    android:src="@mipmap/ic_launcher"
                    android:contentDescription="@string/avatar"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/user_name"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:padding="8dp"/>
                    <View
                        android:layout_height="1px"
                        android:layout_width="match_parent"
                        android:background="@color/divider"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:focusable="true"
                android:clickable="true"
                android:background="?attr/selectableItemBackground">
                <ImageView
                    android:layout_width="17dp"
                    android:layout_height="17dp"
                    android:layout_margin="3dp"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_help_black_24dp"
                    android:tint="@color/grey"
                    android:contentDescription="@string/avatar"/>
                <LinearLayout
                    android:layout_weight="1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:text="@string/help"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:padding="8dp"/>
                    <View
                        android:layout_height="1px"
                        android:layout_width="match_parent"
                        android:background="@color/divider"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>